--- a/dictionary/src/components/card/Card.css
+++ b/dictionary/src/components/card/Card.css
@@ -1,12 +1,16 @@
 /* Стили для карточек слов */
 .word-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: 10px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 30%;
+    width: 80%;
     height: 40%;
     cursor: pointer;
 }
@@ -23,9 +27,18 @@
     margin-bottom: 10px;
 }
 
-.card-container {
+/* .card-container {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
+} */
+
+.card-container {
+    display: flex; /* Используем Flexbox для размещения элементов */
+    justify-content: center; /* Центрируем карточку по горизонтали */
+    align-items: center; /* Центрируем карточку по вертикали */
+    height: 50vh; /* Задаем высоту контейнера на весь экран */
+    padding: 20px; /* Добавляем отступы */
+    box-sizing: border-box; /* Учитываем отступы и границы в общей ширине и высоте */
 }
