--- a/dictionary/src/App.css
+++ b/dictionary/src/App.css
@@ -1,13 +1,12 @@
-  /* #root {
+  #root {
   max-width: 100%;
   max-height: 100%;
-  } */
-  /* margin: 0 auto;
-  padding: 2rem; */
-  /* text-align: center; 
-} /*
+  margin: 0 auto;
+  padding: 2rem; 
+  text-align: center; 
+} 
 
-/* .logo { 
+.logo { 
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -15,8 +14,8 @@
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
-} */
-/* .logo.react:hover {
+} 
+  .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
@@ -41,4 +40,4 @@
 
 .read-the-docs {
   color: #888;
-} */
+} 
