--- a/dictionary/src/components/cardSlider/CardSlider.css
+++ b/dictionary/src/components/cardSlider/CardSlider.css
@@ -1,11 +1,18 @@
 .cardSlider-container{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 80%;
 }
 
 .wrapper{
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    height: 60vh;
+    width: 100%;
 }
 
 .counter {
