--- a/dictionary/src/components/cardSlider/CardSlider.css
+++ b/dictionary/src/components/cardSlider/CardSlider.css
@@ -10,6 +10,7 @@
 .wrapper{
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-evenly;
     height: 60vh;
     width: 100%;
